# ubuntu-rivendell-installer

./: ChangeLog  Makefile.am  PACKAGE_VERSION
assets/: Makefile.am  deb_preseeds
debian/: rules
docs/: Makefile.am  index.xml  mint21_cleanups.txt
repo/: Makefile.repo  install_rivendell.sh  install_rivendell_devel.sh  sanity_check.sh
scripts/: installer_install_rivendell.sh
